--- a/src/app/shared/components/barra-busqueda/barra-busqueda.css
+++ b/src/app/shared/components/barra-busqueda/barra-busqueda.css
@@ -1,28 +1,28 @@
-.barra-busqueda-container{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    padding: 1rem;
-    color: #010300;
+.barra-busqueda-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  color: #010300;
 }
 
-.busqueda{
-    display: flex;
-    height: 3rem;
-    gap: 2rem;
-    justify-content:space-between;
+.busqueda {
+  display: flex;
+  height: 3rem;
+  gap: 2rem;
+  justify-content: space-between;
 }
 
-.busqueda input{
-    width: 100%;
-    box-shadow: 1px 1px 10px;
+.busqueda input {
+  width: 100%;
+  box-shadow: 1px 1px 10px #474747;
 }
 
-.busqueda button{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 8vw;
-    font-size: 14px;
-    box-shadow: 1px 1px 10px;
+.busqueda button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 8vw;
+  font-size: 14px;
+  box-shadow: 1px 1px 10px #474747;
 }
