--- a/src/app/pages/content/editar-centro/editar-centro.css
+++ b/src/app/pages/content/editar-centro/editar-centro.css
@@ -1,37 +1,54 @@
-.general-container-centros{
-    display: flex;
-    flex-direction: column;
-    padding: 0.5rem;
-    margin: 0.5rem;
-    height: 80vh;
-    width: 100vw;
+.general-container-centros {
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  height: 100vh;
+  width: 100%;
 }
 
-.title-name{
-    color: #D9DCD6
+.title {
+  color: #000000;
+  display: flex;
+  text-align: start;
+  padding-bottom: 2rem;
+  width: 80vw;
 }
 
-form{
-    width: 80vw;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  padding: 2rem;
 }
 
-form .form-label{
-    color: #D9DCD6;
+form {
+  width: 80vw;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  box-shadow: 1px 1px 10px;
+  padding: 2rem;
+  border-radius: 1rem;
+  background-color: #c3d7e163;
 }
 
-.datos-centro{
-    height: 80vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+form .form-label {
+  color: #040404;
 }
 
-.beans{
-    display: flex;
-    flex-direction: row;
-    gap: 1rem;
-    flex-wrap: nowrap;
+.datos-centro {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.beans {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  flex-wrap: nowrap;
 }
