--- a/src/app/pages/content/editar-coordinador/editar-coordinador.css
+++ b/src/app/pages/content/editar-coordinador/editar-coordinador.css
@@ -1,62 +1,76 @@
 .general-container-coordinador {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 0.5rem;
-    margin: 0.5rem;
-    min-height: 80vh; 
-    height: auto;
-    width: 100vw;
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  height: 100vh;
+  width: 100%;
 }
 
-.title-name {
-    color: #D9DCD6;
+.title {
+  color: #000000;
+  display: flex;
+  text-align: start;
+  padding-bottom: 2rem;
+  width: 80vw;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  padding: 2rem;
 }
 
 form {
-    width: 80vw;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    gap: 1rem;
+  width: 80vw;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  box-shadow: 1px 1px 10px;
+  padding: 2rem;
+  border-radius: 1rem;
+  background-color: #c3d7e163;
 }
 
 form .form-label {
-    color: #D9DCD6;
+  color: #000000;
 }
 
 .datos-coordinador {
-    min-height: 80vh;
-    display: flex;
-    justify-content: center; 
-    align-items: center; 
-    padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.mdc-data-table__cell, .mdc-data-table__header-cell {
-    padding: 0;
+.mdc-data-table__cell,
+.mdc-data-table__header-cell {
+  padding: 0;
 }
 
 .mat-expansion-panel-animations-enabled .mat-expansion-panel-header {
-    height: var(--mat-expansion-header-expanded-state-height, 3rem);
+  height: var(--mat-expansion-header-expanded-state-height, 3rem);
 }
 
 .mat-expansion-panel-header {
-    padding: 0;
+  padding: 0;
 }
 
 .container-header {
-    display: flex;
-    width: 100%; 
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .title-header {
-    padding: 10px;
+  padding: 10px;
 }
 
 .buttons-header {
-    display: flex;
-    gap: 1rem;
+  display: flex;
+  gap: 1rem;
 }
