--- a/src/app/shared/components/centros-list/centros-list.css
+++ b/src/app/shared/components/centros-list/centros-list.css
@@ -1,27 +1,27 @@
-.centros-container{
-    display: grid;
-    align-items: center;
-    border-radius: 0.5rem;
-    background-color: #ffffff;
-    padding: 0.5rem;
-    width: 26vw;
-    box-shadow: 1px 1px 10px;
+.centros-container {
+  display: grid;
+  align-items: center;
+  border-radius: 0.5rem;
+  background-color: #ffffff;
+  padding: 0.5rem;
+  width: 26vw;
+  box-shadow: 1px 1px 10px #474747;
 }
 
-.datos-centro{
-    padding: 1rem;
-    gap: 1rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.datos-centro {
+  padding: 1rem;
+  gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.botones-container{
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
+.botones-container {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
 }
 
-button{
-    border-radius: 2rem;
+button {
+  border-radius: 2rem;
 }
