--- a/src/app/shared/components/empleados-list/empleados-list.css
+++ b/src/app/shared/components/empleados-list/empleados-list.css
@@ -5,7 +5,7 @@
   background-color: #ffffff;
   padding: 0.5rem;
   width: 26vw;
-  box-shadow: 1px 1px 10px;
+  box-shadow: 1px 1px 10px #474747;
 }
 
 .datos-empleado {
