--- a/src/app/shared/components/header/header.css
+++ b/src/app/shared/components/header/header.css
@@ -1,16 +1,16 @@
 .container-cabecera {
   display: flex;
-  align-items: center;
   flex-direction: column;
   height: 100vh;
   background-color: rgb(255, 255, 255);
   border-top-right-radius: 1rem;
-  box-shadow: 1px 1px 10px;
+  box-shadow: 1px 1px 10px #474747;
 }
 
 .container-datos {
   flex: 1;
   display: flex;
+  width: 100%;
   flex-direction: column;
   justify-content: space-between;
 }
@@ -18,16 +18,12 @@
 .container-data {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 2rem;
-}
-
-mat-divider {
-  width: 10rem;
 }
 
 mat-list-item {
-  text-align: start;
+  width: 100%;
+  padding: 0;
+  gap: 1rem;
 }
 
 .container-enlaces {
@@ -35,6 +31,7 @@ mat-list-item {
   align-items: stretch;
   flex-direction: column;
   width: 100%;
+  padding: 2rem;
 }
 
 .container-enlaces button {
@@ -44,7 +41,6 @@ mat-list-item {
 
 .container-title {
   display: flex;
-  justify-content: center;
   align-items: center;
   padding: 2rem;
 }
@@ -60,19 +56,15 @@ mat-list-item {
 
 .container-logout {
   display: flex;
-  padding-bottom: 0.5rem;
   justify-content: center;
+  flex-direction: column;
+  gap: 2rem;
+  padding: 2rem;
   align-items: center;
 }
 
-mat-card {
-  background-color: white;
-  border: none;
-}
-
-mat-card-header {
-  display: flex;
-  justify-content: center;
+.container-logout button {
+  width: 100%;
 }
 
 .userImage {
