--- a/src/app/pages/content/crear-departamento/crear-departamento.html
+++ b/src/app/pages/content/crear-departamento/crear-departamento.html
@@ -40,7 +40,7 @@
             </select>
           </div>
         </div>
-        <button class="btn btn-dark">Editar</button>
+        <button class="btn btn-dark" (click)="crearDepartamento(formControl)">Editar</button>
       </form>
     </section>
   </section>
