--- a/src/app/app.css
+++ b/src/app/app.css
@@ -19,7 +19,8 @@
   width: 100%;
   height: 100vh;
   position: relative;
-  overflow: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .content-container-login {
@@ -36,9 +37,9 @@
 }
 
 .back-video {
-  position: absolute;
+  position: fixed;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   z-index: -1;
   object-fit: cover;
 }
