--- a/src/app/pages/content/agregar-auditel/agregar-auditel.css
+++ b/src/app/pages/content/agregar-auditel/agregar-auditel.css
@@ -1,30 +1,46 @@
-.general-container-empleados{
-    display: flex;
-    flex-direction: column;
-    padding: 0.5rem;
-    margin: 0.5rem;
-    height: 80vh;
-    width: 100vw;
+.general-container-empleados {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  padding: 2rem;
 }
 
-.title-name{
-    color: #D9DCD6
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start; /* importante: flex-start, no center */
+  align-items: center;
+  width: 100%;
+  padding: 2rem;
+}
+.title {
+  color: #000000;
+  display: flex;
+  text-align: start;
+  padding-bottom: 2rem;
+  width: 80vw;
 }
 
-form{
-    width: 80vw;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+form {
+  width: 80vw;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  box-shadow: 1px 1px 10px;
+  padding: 2rem;
+  border-radius: 1rem;
+  background-color: #c3d7e163;
 }
 
-form .form-label{
-    color: #D9DCD6;
+form .form-label {
+  color: #000000;
 }
 
-.datos-empleado{
-    height: 80vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.datos-empleado {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
